--- a/90-update-resolv.conf
+++ b/90-update-resolv.conf
@@ -22,7 +22,7 @@
 DNSMASQ_RESOLV=/etc/dnsmasq.d/resolv-${CONNECTION_UUID}.conf
 
 # for debugging
-#set > /tmp/90-update-resolv.log.$(date +%s)
+set > /tmp/90-update-resolv.log
 
 function write_dnsmasq_header
 {
@@ -30,7 +30,8 @@ function write_dnsmasq_header
  then
   echo "# ${DNSMASQ_RESOLV} generated on $(date)" > ${DNSMASQ_RESOLV}
   echo "# Generator: ${0}" >> ${DNSMASQ_RESOLV}
-  echo "# Connection: ${CONNECTION_UUID}" >> ${DNSMASQ_RESOLV}
+  echo "# Connection NAME: ${CONNECTION_ID}" >> ${DNSMASQ_RESOLV}
+  echo "# Connection UUID: ${CONNECTION_UUID}" >> ${DNSMASQ_RESOLV}
   echo "#" >> ${DNSMASQ_RESOLV}
  fi
 }
@@ -55,18 +56,22 @@ function create_dnsmasq_config_env
  done
 }
 
-function create_dnsmasq_config_from_resolv_conf
+function create_dnsmasq_vpn_config
 {
  local NS
  local DOMAIN=""
 
  write_dnsmasq_header
 
- for DOMAIN in ${IP4_DOMAINS}
+ echo "DHCP4_DOMAIN_SEARCH: ${DHCP4_DOMAIN_SEARCH}"
+ echo "DHCP4_DOMAIN_NAME_SERVERS: ${DHCP4_DOMAIN_NAME_SERVERS}"
+
+ for DOMAIN in ${VPN_IP4_DOMAINS}
  do
+  # make sure the DOMAIN is not from an other config
   grep -q -E "# IP4_DOMAINS:.* ${DOMAIN}" /etc/dnsmasq.d/resolv-*.conf && continue
 
-  for NS in $(awk '/^nameserver/ {print $2}' /etc/resolv.conf)
+  for NS in ${VPN_IP4_NAMESERVERS}
   do
    # make sure the NS is not from an other config
    grep -q "[=/]${NS}\$" /etc/dnsmasq.d/resolv-*.conf && continue
@@ -93,7 +98,7 @@ function remove_stale_configs
   # in case of a wildcard error
   [ -e "${CONF}" ] || continue
 
-  UUID=$(awk '/^# Connection: / {print $3}' ${CONF})
+  UUID=$(awk '/^# Connection UUID: / {print $4}' ${CONF})
   if ! ( nmcli -t -f UUID connection show --active | grep -q "^${UUID}\$" )
   then
    rm -f ${CONF}
@@ -103,7 +108,14 @@ function remove_stale_configs
 
 function reload_dnsmasq
 {
- cat /etc/resolv.conf.dnsmasq > /etc/resolv.conf
+ cat << _EOF > /etc/resolv.conf
+# /etc/resolv.conf generated on $(date)
+# Generator: $0
+#
+# dnsmasq used for per connection dns servers.
+# See /etc/dnsmasq.d/resolve-*.conf
+nameserver 127.0.0.1
+_EOF
  [ -n "${DHCP4_DOMAIN_SEARCH}" ] && echo "search ${DHCP4_DOMAIN_SEARCH}" >> /etc/resolv.conf
  # "killall -HUP dnsmasq" is not sufficient for new files
  /sbin/service dnsmasq restart 2>&1 > /dev/null
@@ -117,7 +129,7 @@ case "$2" in
   ;;
  "vpn-up")
   remove_stale_configs
-  create_dnsmasq_config_from_resolv_conf
+  create_dnsmasq_vpn_config
   reload_dnsmasq
   ;;
  "down")
