Revert changes to debug line, default debug disabled.

--- a/90-update-resolv.conf
+++ b/90-update-resolv.conf
@@ -22,7 +22,7 @@
 DNSMASQ_RESOLV=/etc/dnsmasq.d/resolv-${CONNECTION_UUID}.conf
 
 # for debugging
-set > /tmp/90-update-resolv.log
+#set > /tmp/90-update-resolv.log.$(date +%s)
 
 function write_dnsmasq_header
 {
