Remove some echo's used for debugging...

--- a/90-update-resolv.conf
+++ b/90-update-resolv.conf
@@ -63,12 +63,9 @@ function create_dnsmasq_vpn_config
 
  write_dnsmasq_header
 
- echo "DHCP4_DOMAIN_SEARCH: ${DHCP4_DOMAIN_SEARCH}"
- echo "DHCP4_DOMAIN_NAME_SERVERS: ${DHCP4_DOMAIN_NAME_SERVERS}"
-
  for DOMAIN in ${VPN_IP4_DOMAINS}
  do
-  # make sure the DOMAIN is not from an other config
+  # make sure the DOMAIN is not from an other config??
   grep -q -E "# IP4_DOMAINS:.* ${DOMAIN}" /etc/dnsmasq.d/resolv-*.conf && continue
 
   for NS in ${VPN_IP4_NAMESERVERS}
