Fallback to use resolv.conf if NM VPN_ vars are not set.

--- a/90-update-resolv.conf
+++ b/90-update-resolv.conf
@@ -56,12 +56,12 @@ function create_dnsmasq_config_env
  done
 }
 
-function create_dnsmasq_vpn_config
+function dnsmasq_config_vpn_use_nm_vars
 {
  local NS
  local DOMAIN=""
 
- write_dnsmasq_header
+ echo -e "# Generated from NetworkManager VPN_ prefix vars\n#" >> ${DNSMASQ_RESOLV}
 
  for DOMAIN in ${VPN_IP4_DOMAINS}
  do
@@ -78,6 +78,44 @@ function create_dnsmasq_vpn_config
    echo "server=/${DOMAIN}/${NS}" >> ${DNSMASQ_RESOLV}
   done
  done
+}
+
+function dnsmasq_config_vpn_from_resolv_conf
+{
+ local NS
+ local DOMAIN=""
+
+ echo -e "# Generated from resolv.conf\n#" >> ${DNSMASQ_RESOLV}
+
+ for DOMAIN in ${IP4_DOMAINS}
+ do
+  # make sure the DOMAIN is not from an other config??
+  grep -q -E "# IP4_DOMAINS:.* ${DOMAIN}" /etc/dnsmasq.d/resolv-*.conf && continue
+
+  for NS in $(awk '/^nameserver/ {print $2}' /etc/resolv.conf)
+  do
+   # make sure the NS is not from an other config
+   grep -q "[=/]${NS}\$" /etc/dnsmasq.d/resolv-*.conf && continue
+   # FIXME: skip any IPv6 nameservers, this is sad
+   grep -q ':' <<< "${NS}" && continue
+
+   echo "server=/${DOMAIN}/${NS}" >> ${DNSMASQ_RESOLV}
+  done
+ done
+}
+
+function create_dnsmasq_config_vpn
+{
+ write_dnsmasq_header
+
+ # Try to use NetworkManager VPN_ variables
+ # Fallback to parsing resolv.conf if VPN_ vars are not set
+ if [ -n "${VPN_IP4_DOMAINS}" ] && [ -n ${VPN_IP4_NAMESERVERS} ]
+  then
+   dnsmasq_config_vpn_use_nm_vars
+  else
+   dnsmasq_config_vpn_from_resolv_conf
+ fi
 }
 
 function remove_dnsmasq_config
@@ -105,6 +143,7 @@ function remove_stale_configs
 
 function reload_dnsmasq
 {
+ cp /etc/resolv.conf /tmp/resolv.conf-${CONNECTION_UUID}
  cat << _EOF > /etc/resolv.conf
 # /etc/resolv.conf generated on $(date)
 # Generator: $0
@@ -126,7 +165,7 @@ case "$2" in
   ;;
  "vpn-up")
   remove_stale_configs
-  create_dnsmasq_vpn_config
+  create_dnsmasq_config_vpn
   reload_dnsmasq
   ;;
  "down")
